--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -25,9 +25,33 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    
+                    @if (ViewContext.HttpContext.User.IsInRole("Dentist"))
+                    {
+                        <li>@Html.ActionLink("My Patients", "MyPatients", "Dentist")</li>
+                        <li>@Html.ActionLink("My Schedule", "MySchedule", "Dentist")</li>
+                    }
+
+                    @if (ViewContext.HttpContext.User.IsInRole("Patient"))
+                    {
+                        <li>@Html.ActionLink("Arrange Appointment", "ArrangeAppointment", "Patient")</li>
+                        <li>@Html.ActionLink("My Dentist", "MyDentist", "Patient")</li>
+                    }
+
+                    @if (ViewContext.HttpContext.User.IsInRole("Admin"))
+                    {
+                        <li class="dropdown">
+                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Click me<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Get Dentist", "GetDentist", "Admin")</li>
+                                <li>@Html.ActionLink("Details", "Details", "Admin")</li>
+                            </ul>
+                        </li>
+                                       
+                    }
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+                 
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
