--- a/WebApplication1/WebApplication1/Views/Home/LandingPage.cshtml
+++ b/WebApplication1/WebApplication1/Views/Home/LandingPage.cshtml
@@ -113,6 +113,8 @@
                         <div class="download-block text-center">
 
                             <a href="@Url.Action("Register","Dentist")" class="btn btn-download">I am a dentist</a><a href="@Url.Action("Register","Account")" class="btn btn-download">I need a dentist</a>
+                            <br />
+                            <a href="@Url.Action("Login","Account")" class="btn btn-download">Login</a>
                         </div>
                     </div>
                 </div>
