--- a/WebApplication1/WebApplication1/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,12 @@
 ﻿@model WebApplication1.ViewModels.Account.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<!--FontAwesome (fa) icons will not work wihtout links-->
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+
+<h4>Use another service to login.</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
@@ -19,7 +24,7 @@
             <div id="socialLoginList">
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account"><i class="fa fa-facebook-square" style="font-size:48px;color:#3b5998"></i></button>
                     }
                 </p>
             </div>
