Register CSS file edited

--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -25,11 +25,15 @@
         <a class="google" href="#">Google+</a>
         <div class="clr"><hr /></div>
         <div class="mail-text">Or sign up using your email address.</div>
+        <br />
         <div class="forms">
             <form action="" method="get" name="register">
-                <input name="fullname" type="text" value="Enter your full name..." size="70" id="username" />
-                <input name="email" type="text" value="Enter your email address..." size="70" id="mail" />
-                <input name="password" type="password" value="Enter a password..." size="70" id="password" />
+                <div class="mail-text">Enter your email</div>
+                <input name="fullname" type="text" size="65" id="mail" />
+                <div class="mail-text">Enter your password</div>
+                <input name="email" type="text" size="65" id="password" />
+                <div class="mail-text">Confirm your password</div>
+                <input name="password" type="password" size="65" id="password" />
             </form>
         </div>
         <a class="create-acc" href="#">Create My Account</a>
