--- a/WebApplication1/WebApplication1/Content/registercss/register.css
+++ b/WebApplication1/WebApplication1/Content/registercss/register.css
@@ -23,9 +23,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	line-height: 1;
-}
+
 ol, ul {
 	list-style: none;
 }
@@ -45,9 +43,9 @@ table {
 /* Reset End */
 .clr { clear: both;}
 body {
-	background: #2ca1cc;
+    line-height: 1;
 	margin: 0 auto;
-	padding: 0 auto;
+	padding: 0;
 	font-family: 'Open Sans', sans-serif;
 	color: #777;
 	font-weight:300;
@@ -56,7 +54,7 @@ body {
 #wrapper {
 	margin: 50px auto;
 	width: 540px;
-	height:460px;
+	height: 590px;
 	background: #fff;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -86,53 +84,6 @@ body {
 	margin-bottom: 25px;
 }
 
-.twitter {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-	width: 160px;
-	height:40px;
-	padding-top: 10px;
-    border: 0px solid #178bb6;
-    border-radius: 8px;
-    background: #992828;
-    background: -webkit-gradient(linear, left top, left bottom, from(#1daee3), to(#1daee3));
-    background: -moz-linear-gradient(top, #1daee3, #1daee3);
-    background: linear-gradient(to bottom, #1daee3, #1daee3);
-    font-family: 'Open Sans', sans-serif;
-	font-weight:700;
-    color: #ffffff;
-    text-decoration: none;
-	margin-right: 10px;
-}
-.twitter:hover,
-.twitter:focus {
-    background: #1ca4d6;
-    color: #ffffff;
-    text-decoration: none;
-}
-.twitter:active {
-    background: #1ca4d6;
-}
-.twitter:before{
-    content:  "\0000a0";
-    display: inline-block;
-    height: 50px;
-    width: 45px;
-    line-height: 24px;
-    margin: 0 4px -6px -4px;
-    position: relative;
-	padding-left: 10px;
-    top: -10px;
-    left: -21px;
-    background: url("http://i.imgur.com/2ATElSK.png") no-repeat center center #1ca4d6;
-    background-size: 29px 24px;
-	-webkit-border-radius: 8px 0px 0px 8px;
-	-moz-border-radius: 8px 0px 0px 8px;
-	-o-border-radius: 8px 0px 0px 8px;
-	-ms-border-radius: 8px 0px 0px 8px;
-	border-radius: 8px 0px 0px 8px;
-}
 .facebook {
     display: inline-block;
     text-align: center;
@@ -161,8 +112,8 @@ body {
 .facebook:before{
     content:  "\0000a0";
     display: inline-block;
-    height: 50px;
-    width: 45px;
+    height: 40px;
+    width: 55px;
     line-height: 24px;
     margin: 0 4px -6px -4px;
     position: relative;
@@ -204,8 +155,8 @@ body {
 .google:before{
     content:  "\0000a0";
     display: inline-block;
-    height: 50px;
-    width: 45px;
+    height: 40px;
+    width: 55px;
     line-height: 24px;
     margin: 0 4px -6px -4px;
     position: relative;
@@ -279,7 +230,7 @@ body {
 	font-weight:700;
     color: #ffffff;
     text-decoration: none;
-	height: 31px;
+	height: 40px;
 	margin-top: 20px;
 }
 .create-acc:hover,
@@ -298,7 +249,7 @@ body {
 .create-acc:after{
     content:  "\0000a0";
     display: inline-block;
-    height: 50px;
+    height: 40px;
     width: 50px;
     line-height: 24px;
     margin: 0 4px -6px -4px;
