--- a/WebApplication1/WebApplication1/Views/Admin/GetDentist.cshtml
+++ b/WebApplication1/WebApplication1/Views/Admin/GetDentist.cshtml
@@ -11,147 +11,149 @@
 </p>
 <div style="overflow-x:auto;">
     <table class="table-striped">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmploymentStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateCreated)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateModified)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmailConfirmed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PasswordHash)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SecurityStamp)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LockoutEnabled)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AccessFailedCount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Place)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PatientId)
-            </th>
-            <th>
-                @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+        <thead class="thead-inverse table-bordered">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DateOfBirth)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmploymentStatus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DateCreated)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DateModified)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmailConfirmed)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PasswordHash)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SecurityStamp)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LockoutEnabled)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AccessFailedCount)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Place)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PatientId)
-                </td>
-                <td>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.DateOfBirth)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.EmploymentStatus)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.DateCreated)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.DateModified)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.EmailConfirmed)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.PasswordHash)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.SecurityStamp)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.PhoneNumber)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.TwoFactorEnabled)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.LockoutEnabled)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.AccessFailedCount)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.UserName)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.Place)
+                </th>
+                <th style="border-right: 1px solid #ddd">
+                    @Html.DisplayNameFor(model => model.PatientId)
+                </th>
+                <th>
                     @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
+                </th>
+                <th></th>
             </tr>
-        }
+        </thead>
 
-    </table>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateOfBirth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EmploymentStatus)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateCreated)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateModified)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.EmailConfirmed)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PasswordHash)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SecurityStamp)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LockoutEnabled)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AccessFailedCount)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Place)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PatientId)
+                    </td>
+                    <td>
+                        @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+
+</table>
 </div>
 
