Edited GetDentist table and MyPatients table, Added GetPatients table; Resloved issue where already logged user can open Login page.

--- a/WebApplication1/WebApplication1/Content/bootstrap.css
+++ b/WebApplication1/WebApplication1/Content/bootstrap.css
@@ -1436,7 +1436,8 @@ th {
 
 .table thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #dddddd;
+  /*border-bottom: 2px solid #dddddd;*/
+  background-color: #aaa6ff
 }
 
 .table caption + thead tr:first-child th,
