--- a/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/MyPatients.cshtml
@@ -1,16 +1,67 @@
 ﻿@using Kendo.Mvc.UI
 @using WebApplication1.Models
+@model IEnumerable<WebApplication1.Models.Patient>
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>My patients</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@(Html.Kendo().Grid<PatientDTO>()
+<div style="overflow-x:auto;">
+    <table class="table">
+        <thead class="thead-inverse">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.LastName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateOfBirth)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DateCreated)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+
+        @foreach (var item in Model)
+            {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateOfBirth)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateCreated)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
+
+
+
+
+@*@(Html.Kendo().Grid<PatientDTO>()
         .Name("grid")
         .Columns(columns =>
         {
@@ -52,7 +103,7 @@
             alert("Errors:\n" + errors.join("\n"));
         }
     }
-</script>
+</script>*@
 
 @*<script id="template" type="text/kendo-tmpl">
     @(Html.Kendo().TabStrip()
@@ -101,7 +152,7 @@
 
 
 
-<script>
+@*<script>
     function dataBound() {
         this.expandRow(this.tbody.find("tr.k-master-row").first());
     }
@@ -132,4 +183,4 @@
         font-style: normal;
         font-weight: bold;
     }
-</style>
+</style>*@
