--- a/WebApplication1/WebApplication1/Views/Admin/GetDentist.cshtml
+++ b/WebApplication1/WebApplication1/Views/Admin/GetDentist.cshtml
@@ -10,68 +10,23 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <div style="overflow-x:auto;">
-    <table class="table-striped">
-        <thead class="thead-inverse table-bordered">
+    <table class="table">
+        <thead class="thead-inverse">
             <tr>
-                <th style="border-right: 1px solid #ddd">
+                <th >
                     @Html.DisplayNameFor(model => model.FirstName)
                 </th>
-                <th style="border-right: 1px solid #ddd">
+                <th >
                     @Html.DisplayNameFor(model => model.LastName)
                 </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.DateOfBirth)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.Address)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.EmploymentStatus)
-                </th>
-                <th style="border-right: 1px solid #ddd">
+                <th >
                     @Html.DisplayNameFor(model => model.DateCreated)
                 </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.DateModified)
-                </th>
-                <th style="border-right: 1px solid #ddd">
+                <th >
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.EmailConfirmed)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.PasswordHash)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.SecurityStamp)
-                </th>
-                <th style="border-right: 1px solid #ddd">
+                <th >
                     @Html.DisplayNameFor(model => model.PhoneNumber)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.LockoutEnabled)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.AccessFailedCount)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.UserName)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.Place)
-                </th>
-                <th style="border-right: 1px solid #ddd">
-                    @Html.DisplayNameFor(model => model.PatientId)
                 </th>
                 <th>
                     @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
@@ -90,58 +45,13 @@
                         @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.DateOfBirth)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Address)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EmploymentStatus)
-                    </td>
-                    <td>
                         @Html.DisplayFor(modelItem => item.DateCreated)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DateModified)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EmailConfirmed)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PasswordHash)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.SecurityStamp)
-                    </td>
-                    <td>
                         @Html.DisplayFor(modelItem => item.PhoneNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LockoutEnabled)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AccessFailedCount)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.UserName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Place)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PatientId)
                     </td>
                     <td>
                         @* @Html.DisplayNameFor(model => model.Schedule.Id) *@
