--- a/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_LoginPartial.cshtml
@@ -15,9 +15,9 @@
             </a>
         </li>
         <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="glyphicon glyphicon-circle-arrow-down"></span></a>
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span class="glyphicon glyphicon-cog"></span></a>
             <ul class="dropdown-menu">
-                <li>@Html.ActionLink("Get Dentist", "GetDentist", "Admin")</li>
+                <li>@Html.ActionLink("Edit profile", "Edit", "Admin")</li>
                 <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
             </ul>
         </li>
