Dentist Registratio, Patient Registration and Login (svi izgledaju na isti fazon i funkscionalni su).

--- a/WebApplication1/WebApplication1/Content/Css/CustomLogin.css
+++ b/WebApplication1/WebApplication1/Content/Css/CustomLogin.css
@@ -1,24 +1,24 @@
 .form-signin {
-  max-width: 400px; 
+  max-width: 370px; 
   display:block;
   background-color: #f7f7f7;
   -moz-box-shadow: 0 0 3px 3px #888;
     -webkit-box-shadow: 0 0 3px 3px #888;
 	box-shadow: 0 0 3px 3px #888;
-  border-radius:2px;
+  border-radius:8px;
 }
 .main{
-	padding: 38px;
+	padding: 30px;
 }
 .social-box{
   margin: 0 auto;
-  padding: 38px;
+  padding: 36px;
   border-bottom:1px #ccc solid;
 }
 .social-box a{
   font-weight:bold;
   font-size:18px;
-  padding:8px;
+  padding:10px;
 }
 .social-box a i{
   font-weight:bold;
@@ -28,6 +28,7 @@
 	font-size:20px;
 	font-weight:bold;
 	padding:38px 38px 0px 38px;
+    color: #000000;
 	
 }
 .form-signin .form-signin-heading,
