--- a/WebApplication1/WebApplication1/Views/Account/Register.cshtml
+++ b/WebApplication1/WebApplication1/Views/Account/Register.cshtml
@@ -1,73 +1,68 @@
 ﻿@model WebApplication1.ViewModels.Account.RegisterViewModel
-@{
-    ViewBag.Title = "Register as a dentist";
-}
 
-<h2>@ViewBag.Title.</h2>
 
-@* PART WITH SPECIAL CSS*@
-@section css {
-    <link href="@Url.Content("~/Content/registercss/register.css")" rel="stylesheet" />
-}
 
+
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Custom Login Form</title>
-</head>
+    <link href="~/Content/css/CustomLogin.css" rel="stylesheet" />
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    <style>
+        body {
+            background-image: url('../../Content/Images/download_bg.jpg');
+            background-position: center top;
+            background-size: 100% auto;
+            opacity: 0.94;
+        }
+    </style>
 
+</head>
 <body>
-    <div id="wrapper">
-        <div class="join">Join Today</div>
-        <div class="lock"></div>
-        <div class="clr"></div>
-        <div class="login-options">Choose on of the following sign up methods.</div>
-        <a class="facebook" href="#">Facebook</a>
-        <a class="google" href="#">Google+</a>
-        <div class="clr"><hr /></div>
-        <div class="mail-text">Or sign up using your email address.</div>
-        <br />
-        <div class="forms">
-            <form action="" method="get" name="register">
-                <div class="mail-text">Enter your email</div>
-                <input name="fullname" type="text" size="65" id="mail" />
-                <div class="mail-text">Enter your password</div>
-                <input name="email" type="text" size="65" id="password" />
-                <div class="mail-text">Confirm your password</div>
-                <input name="password" type="password" size="65" id="password" />
+    <div class="container">
+        <div class="row">
+            <form method="post" class="form-signin mg-btm">
+                <h3 class="heading-desc">
+                    Register to DentisCard
+                </h3>
+                <div class="social-box">
+                    <div class="row mg-btm">
+                        <div class="col-md-12">
+                            <a href="#" class="btn btn-primary btn-block">
+                                <i class="icon-facebook"></i>    Login with Facebook
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="main">
+                   @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder="Email" })
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder="Password" })
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
+
+                    <span class="clearfix"></span>
+                </div>
+                <div class="login-footer">
+                    <div class="row">
+                        <div class="col-xs-6 col-md-6">
+                            <div class="left-section">
+                                <a href="">Forgot your password?</a>
+ 
+                                @Html.ActionLink("Login now", "Login", "Account")
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-md-6 pull-right">
+                            <button type="submit" class="btn btn-large btn-success pull-right">Register</button>
+                        </div>
+                    </div>
+
+                </div>
             </form>
         </div>
-        <a class="create-acc" href="#">Create My Account</a>
     </div>
 </body>
-
-    @*@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h4>Create a new dentist account.</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" class="btn btn-default" value="Register" />
-                </div>
-            </div>
-        }*@
+</html>
 
