Create, Edit and Delete views updated for a Dentist

--- a/WebApplication1/WebApplication1/Views/Dentist/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Dentist
+﻿@model WebApplication1.Models.Patient
 
 @{
     ViewBag.Title = "Edit";
@@ -169,13 +169,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Place, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Place, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Place, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
